# flask-cookiecutter

./: cookiecutter.json
{{cookiecutter.project_name}}/: Dockerfile  MANIFEST.in  Pipfile  README.md  docker-compose.yml  gulpfile.js  package.json  requirements.txt  setup.cfg
{{cookiecutter.project_name}}/nginx/: nginx.conf
{{cookiecutter.project_name}}/tests/: conftest.py  test_app.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name_us}}/: app.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name_us}}/static/js/: component.svelte  index.js
{{cookiecutter.project_name}}/{{cookiecutter.project_name_us}}/static/scss/: style.scss
{{cookiecutter.project_name}}/{{cookiecutter.project_name_us}}/templates/: index.html
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: app.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/static/js/: index.js
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/templates/: index.html
