[metadata]
name = {{cookiecutter.project_name}}
version = 1.0.0
author = Christoph Brosch
author_email = c.brosch@umwelt-campus.de
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True