[metadata]
name = {{cookiecutter.project_name}}
version = 1.0.0
author = {{cookiecutter.author}}
author_email = {{cookiecutter.author_email}}
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
